--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
-    "antd-mobile": "^1.6.11",
-    "react": "16.0.0-alpha.12",
-    "react-dom": "^16.0.0",
-    "react-native": "^0.49.3",
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
+    "react-native": "0.59.10",
+    "react-native-gesture-handler": "~1.4.1",
+    "react-native-reanimated": "~1.3.0",
+    "react-native-screens": "1.0.0-alpha.23",
+    "react-native-unimodules": "0.6.0",
+    "react-native-web": "^0.11.7",
     "react-native-blur": "^3.1.3",
     "react-native-button": "^2.1.0",
     "react-native-image-zoom-viewer": "^2.0.10",
